--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -56,6 +56,38 @@ img {
   }
 }
 
+.modal-btn {
+  min-width: 62px;
+  padding: 9px 12px;
+  border: 1px solid transparent;
+  border-radius: 25px;
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 1.25;
+  cursor: pointer;
+  background-color: var(--accent-text-color);
+  color: var(--accent-color-main);
+  -webkit-transition: color 250ms linear, background-color 250ms linear;
+  transition: color 250ms linear, background-color 250ms linear;
+}
+
+.modal-btn:hover, .modal-btn:focus {
+  background-color: #ecebeb;
+  color: var(--accent-color-main);
+}
+
+@media screen and (min-width: 1280px) {
+  .modal-btn {
+    min-width: 102px;
+    padding: 15px 21px;
+    border: 1px solid transparent;
+    border-radius: 25px;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.28;
+  }
+}
+
 .section-title {
   color: var(--accent-color-main);
   font-size: 34px;
@@ -71,13 +103,49 @@ img {
 }
 
 .header {
-  width: 100%;
   padding-top: 6px;
   outline: 1px solid red;
 }
 
+.header .container {
+  max-width: 480px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  outline: 1px solid red;
+}
+
+@media screen and (min-width: 768px) {
+  .header .container {
+    max-width: 700px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .header .container {
+    max-width: 1050px;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .logo-wrapper {
+    position: relative;
+    width: 130px;
+    height: 50px;
+  }
+}
+
 .logo {
-  margin-right: 61px;
+  margin-top: 6px;
 }
 
 .logo:hover, .logo:focus {
@@ -89,33 +157,122 @@ img {
           animation-iteration-count: 2;
 }
 
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-top: 37px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .logo {
+    position: absolute;
+    left: -70px;
+    bottom: -15px;
+  }
+}
+
 .logo-img {
   width: 199px;
   height: 50px;
 }
 
 .overlay {
+  min-width: 480px;
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
-  height: 502px;
+  height: 508px;
   width: 100vw;
   margin-left: auto;
   margin-right: auto;
   background-color: var(--background-color-accent);
 }
 
-.hero__images-container {
+@media screen and (min-width: 768px) {
+  .overlay {
+    height: 405px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .overlay {
+    height: 665px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header .modal-btn {
+    margin-top: 38px;
+    width: 160px;
+    font-family: var(--main-text);
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 1.31;
+    text-align: center;
+  }
+}
+
+.hero .container {
   position: relative;
   height: 446px;
+  outline: 1px solid red;
+}
+
+@media screen and (min-width: 768px) {
+  .hero .container {
+    height: 312px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero .container {
+    height: 588px;
+  }
+}
+
+.hero__main-text {
+  padding-top: 137px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero__main-text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding-top: 15px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero__main-text {
+    padding-top: 100px;
+  }
 }
 
 .hero__image {
+  z-index: -1;
   width: 171px;
   position: absolute;
   bottom: 0;
   right: 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero__image {
+    width: 143px;
+    right: 213px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero__image {
+    width: 236px;
+    right: 330px;
+  }
 }
 
 .hero {
@@ -123,11 +280,94 @@ img {
   height: 446px;
 }
 
-.title-wrapper {
+@media screen and (min-width: 768px) {
+  .hero {
+    height: 399px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero {
+    height: 665px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero__bioeco-info-image {
+    position: absolute;
+    width: 124px;
+    left: 0;
+    bottom: 28px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero__bioeco-info-image {
+    left: -38px;
+    bottom: 45px;
+    width: 188px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero__bioeco-info-text {
+    position: absolute;
+    bottom: 54px;
+    left: 119px;
+    font-family: var(--main-font);
+    font-size: 8px;
+    line-height: 1.5;
+    color: var(--accent-text-color);
+    max-width: 114px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero__bioeco-info-text {
+    bottom: 82px;
+    left: 178px;
+    font-size: 14px;
+    line-height: 1.4;
+    max-width: 200px;
+  }
+}
+
+.hero__image-woman {
+  width: 168px;
   position: absolute;
-  top: 137px;
+  right: 0;
+  bottom: 0;
+}
+
+@media screen and (min-width: 1280px) {
+  .hero__image-woman {
+    width: 293px;
+  }
+}
+
+.title-wrapper {
   z-index: 10;
   max-width: 218px;
+  height: 124px;
+}
+
+@media screen and (min-width: 768px) {
+  .title-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    max-width: 162px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .title-wrapper {
+    max-width: 277px;
+  }
 }
 
 .hero__title {
@@ -137,6 +377,22 @@ img {
   line-height: 1.15;
   text-transform: uppercase;
   color: var(--accent-text-color);
+  margin-bottom: 19px;
+}
+
+@media screen and (min-width: 768px) {
+  .hero__title {
+    font-size: 22px;
+    line-height: 1.13;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero__title {
+    font-size: 38px;
+    margin-bottom: 25px;
+  }
 }
 
 .hero__title-accent {
@@ -148,18 +404,131 @@ img {
   color: var(--accent-color-main);
 }
 
-@media screen and (max-width: 1199px) {
-  .navigation-list,
-  .modal-btn-header {
+@media screen and (min-width: 768px) {
+  .hero__title-accent {
+    font-size: 34px;
+    line-height: 0.91;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero__title-accent {
+    font-size: 58px;
+    line-height: 0.89;
+  }
+}
+
+.hero__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.hero__buttons-item:not(:last-child) {
+  margin-right: 8px;
+}
+
+@media screen and (min-width: 1280px) {
+  .hero__buttons-item:not(:last-child) {
+    margin-right: 15px;
+  }
+}
+
+@media screen and (max-width: 1279px) {
+  .navigation-list {
     display: none;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 1280px) {
+  .navigation-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding-top: 50px;
+    min-width: 541px;
+  }
+}
+
+.navigation-list__item {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.31;
+  color: var(--accent-text-color);
+}
+
+.navigation-list__link {
+  color: var(--accent-text-color);
+}
+
+.navigation-list__link:hover, .navigation-list__link:focus {
+  color: var(--accent-color-main);
+}
+
+@media screen and (max-width: 768px) {
   .hero__counters-wrapper,
   .hero__bioeco-info,
-  .hero__image-woman {
+  .hero__image-woman,
+  .header .modal-btn {
     display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero__counters-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .counters-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding-top: 5px;
+  }
+  .counters-list__item {
+    font-family: var(--secondary-font);
+    width: 65px;
+    text-align: right;
+    font-size: 28px;
+    line-height: 0.5;
+    margin-bottom: 13px;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: var(--accent-color-main);
+  }
+  .counters-list__item-plaintext {
+    font-family: var(--main-font);
+    font-size: 8px;
+    line-height: 1.28;
+    color: var(--accent-text-color);
+    text-transform: lowercase;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .counters-list {
+    padding-top: 10px;
+  }
+  .counters-list__item {
+    width: 105px;
+    font-size: 46px;
+    margin-bottom: 15px;
+  }
+  .counters-list__item-plaintext {
+    font-size: 14px;
+    line-height: 1.28;
   }
 }
 
@@ -191,20 +560,12 @@ img {
   text-align: center;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  margin-bottom: 18px;
+  margin-bottom: 144px;
 }
 
-.product__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-ul {
+.products__list {
   list-style: none;
+  display: block;
 }
 
 .products__item {
@@ -316,11 +677,24 @@ ul {
   margin-left: auto;
   margin-right: auto;
   background-color: var(--background-color-main);
-  background-image: url(../images/mobile/about/bg.jpg);
+  background-image: url(../images/mobile/about/bg.png);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: bottom;
   background-blend-mode: multiply;
+}
+
+@media screen and (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .about {
+    margin-left: auto;
+    margin-right: auto;
+    background-color: var(--background-color-main);
+    background-image: url(../images/mobile/about/bg@2x.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    background-blend-mode: multiply;
+  }
 }
 
 .about__suptitle {
@@ -332,6 +706,7 @@ ul {
   line-height: 21px;
   text-align: center;
   text-transform: uppercase;
+  padding-top: 125px;
   margin-bottom: 15px;
   margin-left: auto;
   margin-right: auto;
@@ -647,6 +1022,105 @@ ul {
   }
 }
 
+.customer-reviews {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
+@media (min-width: 768px) {
+  .customer-reviews .container {
+    width: 544px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .customer-reviews .container {
+    width: 926px;
+  }
+}
+
+.slider__item {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.slider__customer-img {
+  width: 75px;
+  height: 75px;
+  margin-bottom: 29px;
+}
+
+.slider__text-container {
+  position: relative;
+  padding: 43px 66px 26px 57px;
+  margin-bottom: 24px;
+  background: #fafafa;
+}
+
+.slider__66 {
+  position: absolute;
+  width: 54px;
+  height: 40px;
+  top: 28px;
+  left: 61px;
+}
+
+@media (min-width: 768px) {
+  .slider__66 {
+    top: 30px;
+    left: 40px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .slider__66 {
+    top: 32px;
+    left: 50px;
+  }
+}
+
+.slider__text {
+  position: relative;
+  font-family: var(--main-font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 255%;
+  text-align: center;
+  color: var(--secondary-text-color);
+  background-image: -webkit-repeating-linear-gradient(top, transparent 0px, transparent 19px, #e1e1e1 19px, transparent 20px);
+  background-image: repeating-linear-gradient(top, transparent 0px, transparent 19px, #e1e1e1 19px, transparent 20px);
+}
+
+.slider__dots {
+  width: 32px;
+  height: 4px;
+  margin-bottom: 14px;
+  display: block;
+  fill: #c7133e;
+}
+
+.slider__customer-location {
+  font-family: var(--main-font);
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 186%;
+  text-align: center;
+  color: var(--secondary-text-color);
+}
+
 .footer {
   background-color: var(--background-color-main);
 }
@@ -673,5 +1147,148 @@ ul {
   height: 1px !important;
   width: 1px !important;
   overflow: hidden;
+}
+
+.contacts {
+  background: linear-gradient(white 102px, #fff5f6 102px);
+}
+
+.contacts__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 280px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__container {
+    width: 700px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .contacts__container {
+    width: 1050px;
+  }
+}
+
+.contacts__title {
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  position: absolute;
+  visibility: hidden;
+}
+
+.contacts__cardlist {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts__cardlist {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin-bottom: 81px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .contacts__cardlist {
+    margin-bottom: 85px;
+  }
+}
+
+.cardlist__item {
+  width: 220px;
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+          box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
+  border-radius: 24px;
+  padding-top: 43px;
+  padding-bottom: 43px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0%;
+}
+
+.cardlist__item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .cardlist__item {
+    width: 220px;
+    padding-left: 31px;
+    padding-right: 31px;
+    padding-bottom: 50px;
+    padding-top: 50px;
+    margin-bottom: 0%;
+  }
+  .cardlist__item:not(:last-child) {
+    margin-right: 20px;
+    margin-bottom: 0%;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .cardlist__item {
+    width: 330px;
+    padding-left: 44px;
+    padding-right: 44px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    margin: 0px;
+  }
+  .cardlist__item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+.cardlist__title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 25px;
+  padding-right: 25px;
+  background-color: #F0D1A5;
+  border-radius: 4px;
+  font-family: DM Sans;
+  font-size: 12px;
+  line-height: 1,83em;
+  letter-spacing: 0,04em;
+  text-transform: uppercase;
+  width: 80px;
+  height: 16px;
 }
 /*# sourceMappingURL=main.css.map */
