--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,6 +1,7 @@
 .contacts{
+    padding-bottom: 56px;
     background: linear-gradient(
-        white  102px, #fff5f6 102px
+        var(--accent-text-color)  102px, var(--background-color-main) 102px
     );
 }
 .contacts__container{
@@ -43,7 +44,7 @@
 }
 .cardlist__item{
     width: 220px;
-    background: #FFFFFF;
+    background: var(--accent-text-color);
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
     border-radius: 24px;
     padding-top: 43px;
@@ -176,7 +177,7 @@
     font-size: 12px;
     line-height: 1.5em;
     letter-spacing: 0,04em;
-    color: #907E82;
+    color: var(--main-text-color);
     @media screen and (min-width: 768px){
         font-size: 14px;
         line-height: 1.66em;
@@ -225,7 +226,7 @@
     line-height: 1.83em;
     letter-spacing: 0,04em;
     text-transform: uppercase;
-    color: #FFA5BA;
+    color: var(--accent-color-secondary);
     font-style: 500;
     margin-bottom: 10px;
     @media screen and (min-width: 768px){
@@ -250,7 +251,7 @@
     font-size: 12px;
     line-height: 1.5em;
     letter-spacing: 0,04em;
-    color: #907E82;
+    color: var(--main-text-color);
     font-style: 500;
     @media screen and (min-width: 768px){
         font-size: 14px;
@@ -268,7 +269,7 @@
        font-size: 12px;
        line-height: 1.5em;
        letter-spacing: 0,04em;
-       color: #907E82;
+       color: var(--main-text-color);
        font-style: 500;
        @media screen and (min-width: 768px){
            font-size: 14px;
@@ -323,15 +324,15 @@
     padding-right: 17px;
     padding-top: 20px;
     padding-bottom: 20px;
-    color: #FFFFFF;
-    background-color: #D41342;
+    color: var(--accent-text-color);
+    background-color: var(--accent-color-main);
 }
 .buttonlis__icon{
     margin-left: 8px;
     width: 10px;
     height: 14px;
-    stroke: #FFFFFF;
-    fill: #FFFFFF;
+    stroke: var(--accent-text-color);
+    fill: var(--accent-text-color);
 }
 .buttonlis__franchise{
     font-family: DM Sans;
@@ -351,14 +352,14 @@
     padding-right: 35px;
     padding-top: 20px;
     padding-bottom: 20px;
-    color: #D41342;
-    background-color: #FFFFFF;
+    color: var(--accent-color-main);
+    background-color: var(--accent-text-color);
 }
 .buttonlis__icon--red{
     width: 10px;
     height: 14px;
-    stroke: #D41342;
-    fill: #D41342;
+    stroke: var(--accent-color-main);
+    fill: var(--accent-color-main);
     margin-left: 5px;
 }
 .backdrop{
@@ -382,7 +383,7 @@
     transform: translate(-50%, -50%);
     width: 528px;
     min-height: 581px;
-    background-color:white;
+    background-color:var(--accent-text-color);
     padding: 10px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -398,7 +399,7 @@
     transform: translate(-50%, -50%);
     width: 300px;
     min-height: 400px;
-    background-color:white;
+    background-color:var(--accent-text-color);
     padding: 20px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
@@ -423,14 +424,14 @@
     padding-right: 17px;
     padding-top: 20px;
     padding-bottom: 20px;
-    color: #FFFFFF;
-    background-color: #D41342;
+    color: var(--accent-text-color);
+    background-color: var(--accent-color-main);
 }
 .modal__close:hover,
 .modal__close:focus {
-    color: #D41342;
-    background-color: #fff;
-    border: solid 1px #D41342;
+    color: var(--accent-color-main);
+    background-color: var(--accent-text-color);
+    border: solid 1px var(--accent-color-main);
 }
 .backdrop__card{
     @media screen and (min-width: 768px){
