--- a/src/sass/layout/_header-hero.scss
+++ b/src/sass/layout/_header-hero.scss
@@ -514,9 +514,9 @@
     color: var(--accent-color-main);
   }
 }
-.current {
-  color: var(--accent-color-main);
-}
+// .current {
+//   color: var(--accent-color-main);
+// }
 @media screen and (min-width: 1280px) {
   .menu-button {
     display: none;
