--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -96,7 +96,7 @@
     padding-right: 25px;
     background-color: #F0D1A5;
     border-radius: 4px;
-    font-family: DM Sans;
+    font-family: var(--main-font);
     font-size: 12px;
     line-height: 1,83em;
     letter-spacing: 0,04em;
@@ -153,7 +153,7 @@
     }
 }
 .cardlist__subtitle{
-    font-family: DM Sans;
+    font-family: var(--main-font);
     font-size: 12px;
     line-height: 1.83em;
     letter-spacing: 0,04em;
@@ -172,7 +172,7 @@
     }
 }
 .cardlist__text{
-    font-family: DM Sans;
+    font-family: var(--main-font);
     font-style: 500;
     font-size: 12px;
     line-height: 1.5em;
@@ -201,7 +201,7 @@
     }
 }
 .workingtimes__days{
-    font-family: DM Sans;
+    font-family: var(--main-font);
     font-size: 12px;
     line-height: 1.83em;
     letter-spacing: 0,04em;
@@ -221,7 +221,7 @@
 
 }
 .workingtimes__times{
-    font-family: DM Sans;
+    font-family: var(--main-font);
     font-size: 12px;
     line-height: 1.83em;
     letter-spacing: 0,04em;
@@ -247,7 +247,7 @@
 }
 .contacts__tel{
  text-decoration: none;
- font-family: DM Sans;
+ font-family: var(--main-font);
     font-size: 12px;
     line-height: 1.5em;
     letter-spacing: 0,04em;
@@ -265,7 +265,7 @@
 }
 .contacts__mail{
     text-decoration: none;
-    font-family: DM Sans;
+    font-family: var(--main-font);
        font-size: 12px;
        line-height: 1.5em;
        letter-spacing: 0,04em;
@@ -307,7 +307,7 @@
 }
 }
 .buttonlis__locations{
-    font-family: DM Sans;
+    font-family: var(--main-font);
     font-weight: 700;
     font-size: 16px;
     line-height: 1.3em;
@@ -335,7 +335,7 @@
     fill: var(--accent-text-color);
 }
 .buttonlis__franchise{
-    font-family: DM Sans;
+    font-family: var(--main-font);
     font-weight: 700;
     font-size: 16px;
     line-height: 1.3em;
@@ -407,7 +407,7 @@
 .modal__close{
     margin-right: auto;
     margin-left: auto;
-    font-family: DM Sans;
+    font-family: var(--main-font);
     font-weight: 700;
     font-size: 16px;
     line-height: 1.3em;
