--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -72,21 +72,20 @@ img {
 
 .header {
   width: 100%;
-  padding-top: 6px;
-  outline: 1px solid red;
 }
 
 .logo {
   margin-right: 61px;
 }
 
-.logo:hover, .logo:focus {
+.logo:hover,
+.logo:focus {
   -webkit-animation-name: pulse;
-          animation-name: pulse;
+  animation-name: pulse;
   -webkit-animation-duration: 1000ms;
-          animation-duration: 1000ms;
+  animation-duration: 1000ms;
   -webkit-animation-iteration-count: 2;
-          animation-iteration-count: 2;
+  animation-iteration-count: 2;
 }
 
 .logo-img {
@@ -199,8 +198,8 @@ img {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 ul {
@@ -281,11 +280,11 @@ ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin-top: 30px;
   padding-bottom: 41px;
 }
@@ -295,11 +294,11 @@ ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background-color: var(--accent-text-color);
   width: 40px;
   height: 40px;
@@ -386,8 +385,8 @@ ul {
   margin-bottom: 37px;
   margin-left: 30px;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .advantages {
@@ -417,11 +416,11 @@ ul {
 .advantages-list__icon-wrapper {
   display: block;
   -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
+  -ms-flex-pack: left;
+  justify-content: left;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .advatages-list__img {
@@ -435,17 +434,17 @@ ul {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
   .advantages-list__item {
     -ms-flex-preferred-size: calc(100% / 3 - 60px);
-        flex-basis: calc(100% / 3 - 60px);
+    flex-basis: calc(100% / 3 - 60px);
     min-width: 180px;
   }
   .advantages-list__item:not(:last-child) {
@@ -456,7 +455,7 @@ ul {
 @media screen and (min-width: 1280px) {
   .advantages-list__item {
     -ms-flex-preferred-size: calc(100% / 3 - 30px);
-        flex-basis: calc(100% / 3 - 30px);
+    flex-basis: calc(100% / 3 - 30px);
     min-width: 180px;
   }
   .advantages-list__item:not(:last-child) {
@@ -466,7 +465,13 @@ ul {
 
 .gallery {
   position: relative;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(45%, #fff5f6), color-stop(45%, #ffffff));
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(45%, #fff5f6),
+    color-stop(45%, #ffffff)
+  );
   background: linear-gradient(to bottom, #fff5f6 45%, #ffffff 45%);
   padding-top: 96px;
   padding-bottom: 96px;
@@ -477,10 +482,10 @@ ul {
   display: grid;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-flow: column wrap;
-          flex-flow: column wrap;
+  -ms-flex-flow: column wrap;
+  flex-flow: column wrap;
   -ms-flex-line-pack: justify;
-      align-content: space-between;
+  align-content: space-between;
 }
 
 .gallery__visual {
