fixed header again

--- a/src/sass/layout/_header-hero.scss
+++ b/src/sass/layout/_header-hero.scss
@@ -1,5 +1,7 @@
 .header {
-  outline: 1px solid red;
+  outline: none;
+  padding-top: 0;
+  min-width: 280px;
   & .container {
     max-width: 480px;
     display: flex;
