--- a/src/partials/customer-reviews.html
+++ b/src/partials/customer-reviews.html
@@ -10,9 +10,9 @@
                     <img class="slider__customer-img" src="./images/mobile/reviews/customer-1.png" alt="Customer photo">
                 </picture>
                 <div class="slider__text-container">
-                    <svg class="slider__66">
+                    <!-- <svg class="slider__66">
                         <use href="./images/icons.svg#brackets"></use>
-                    </svg>
+                    </svg> -->
                     <p class="slider__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
                         sem. In hendrerit nulla
                         quam nunc, accumsan
@@ -32,9 +32,9 @@
                     <img class="slider__customer-img" src="./images/mobile/reviews/customer-2.png" alt="Customer photo">
                 </picture>
                 <div class="slider__text-container">
-                    <svg class="slider__66">
+                    <!-- <svg class="slider__66">
                         <use href="./images/icons.svg#brackets"></use>
-                    </svg>
+                    </svg> -->
                     <p class="slider__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
                         sem. In hendrerit
                         nulla
@@ -55,9 +55,9 @@
                     <img class="slider__customer-img" src="./images/mobile/reviews/customer-3.png" alt="Customer photo">
                 </picture>
                 <div class="slider__text-container">
-                    <svg class="slider__66">
+                    <!-- <svg class="slider__66">
                         <use href="./images/icons.svg#brackets"></use>
-                    </svg>
+                    </svg> -->
                     <p class="slider__text">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
                         sem. In hendrerit
                         nulla
