--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -102,16 +102,16 @@
     </ul>
     <ul class="contacts__buttonlist">
         <li class="buttonlist__item" >
-            <button aria-label="button witch open mopal" class="buttonlis__locations" data-open-modal> Our Locations 
-                <svg class="buttonlis__icon">
+            <button aria-label="button witch open mopal" class="buttonlist__locations" data-open-modal> Our Locations 
+                <svg class="buttonlist__icon">
                     <use href="./images/icons.svg#arrow_right_short">
                 </svg>
             </button>
         </li>
         <li class="buttonlist__item">
-            <button class="buttonlis__franchise" >
+            <button class="buttonlist__franchise" >
                 Franchise
-                <svg class=" buttonlis__icon--red ">
+                <svg class=" buttonlist__icon--red ">
                     <use href="./images/icons.svg#arrow_right_short"></use>
                 </svg>
             </button>
