--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -1,8 +1,14 @@
 .contacts{
     padding-bottom: 56px;
     background: linear-gradient(
-        var(--accent-text-color)  102px, var(--background-color-main) 102px
-    );
+        var(--accent-text-color)  102px, var(--background-color-main) 102px);
+    @media screen and (min-width: 1280px) {
+        background-image: url(../images/desktop/contacts/bg.png ),linear-gradient(
+            var(--accent-text-color)  102px, var(--background-color-main) 102px);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+    }
 }
 .contacts__container{
     display: flex;
@@ -85,7 +91,7 @@
     }
 }
 .cardlist__title{
-
+    color: var(--accent-text-color);
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
@@ -306,7 +312,7 @@
     }
 }
 }
-.buttonlis__locations{
+.buttonlist__locations{
     font-family: var(--main-font);
     font-weight: 700;
     font-size: 16px;
@@ -327,14 +333,14 @@
     color: var(--accent-text-color);
     background-color: var(--accent-color-main);
 }
-.buttonlis__icon{
+.buttonlist__icon{
     margin-left: 8px;
     width: 10px;
     height: 14px;
     stroke: var(--accent-text-color);
     fill: var(--accent-text-color);
 }
-.buttonlis__franchise{
+.buttonlist__franchise{
     font-family: var(--main-font);
     font-weight: 700;
     font-size: 16px;
@@ -355,7 +361,7 @@
     color: var(--accent-color-main);
     background-color: var(--accent-text-color);
 }
-.buttonlis__icon--red{
+.buttonlist__icon--red{
     width: 10px;
     height: 14px;
     stroke: var(--accent-color-main);
@@ -377,6 +383,7 @@
     pointer-events: none;
 }
 .backdrop__modal{
+    z-index: 9999999999;
     position: absolute;
     top: 50%;
     left: 50%;
