--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,6 +1,11 @@
-<header class="header">
+<header class="header" id="home">
   <div class="overlay"></div>
   <div class="container">
+    <button type="button" class="menu-button" data-menu-button>
+      <svg class="menu-icon">
+        <use href="./images/icons.svg#Burger_menu"></use>
+      </svg>
+    </button>
     <div class="logo-wrapper">
       <a class="logo link" href="">
         <img class="logo-img" src="./images/mobile/logo/logo1.png" alt="logo image" width="199" />
@@ -26,7 +31,32 @@
       </ul>
     </nav>
     <button class="modal-btn" type="button">Buy now ></button>
-  </div>
+    <div class="mobile-menu" data-menu>
+      <button type="button" class="mobile-menu__close-button" data-menu-close>
+        <svg class="mobile-menu__close-icon">
+          <use href="./images/icons.svg#close_icon"></use>
+        </svg>
+      </button>
+      <button class="modal-btn" type="button">Buy now ></button>
+      <ul class="mobile-menu__list list">
+        <li class="mobile-menu__item">
+          <a href="#home" class="mobile-menu__link link">Home</a>
+        </li>
+        <li class="mobile-menu__item">
+          <a href="#about" class="mobile-menu__link link">About us</a>
+        </li>
+        <li class="mobile-menu__item">
+          <a href="#how" class="mobile-menu__link link">How it's made</a>
+        </li>
+        <li class="mobile-menu__item">
+          <a href="#products" class="mobile-menu__link link">Our products</a>
+        </li>
+        <li class="mobile-menu__item">
+          <a href="#contact" class="mobile-menu__link link">Contact</a>
+        </li>
+      </ul>
+
+    </div>
 </header>
 <main>
   <section class="hero">
@@ -38,7 +68,7 @@
           </h1>
           <ul class="hero__buttons list">
             <li class="hero__buttons-item">
-              <a href="#products"><button class="modal-btn" type="button">Products></button></a>
+              <a href="#products"><button class="modal-btn" type="button">Products</button></a>
             </li>
             <li class="hero__buttons-item">
               <a href="#how"><button class="modal-btn" type="button">How it's made?</button></a>
@@ -50,90 +80,70 @@
           <ul class="counters-list list">
             <li class="counters-list__item">
               16<br /><span class="counters-list__item-plaintext">cafes</span>
+              <div class="counters-list__ellipse">
+              </div>
             </li>
             <li class="counters-list__item">
               23 <span class="counters-list__item-plaintext">food tracks</span>
+              <div class="counters-list__ellipse">
+              </div>
             </li>
           </ul>
         </div>
       </div>
       <picture>
-        <source
-          srcset="
+        <source srcset="
             ./images/desktop/hero/slider-icecream_dt.png    1x,
             ./images/desktop/hero/slider-icecream_dt@2x.png 2x
-          "
-          media="(min-width: 1280px)"
-        />
-        <source
-          srcset="
+          " media="(min-width: 1280px)" />
+        <source srcset="
             ./images/tablet/hero/slider-icecream_tb.png    1x,
             ./images/tablet/hero/slider-icecream_tb@2x.png 2x
-          "
-          media="(min-width: 768px)"
-        />
-        <source
-          srcset="
+          " media="(min-width: 768px)" />
+        <source srcset="
             ./images/mobile/hero/slider-icecream_mb.png    1x,
             ./images/mobile/hero/slider-icecream_mb@2x.png 2x
-          "
-          media="(min-width: 320px)"
-        />
-        <img
-          class="hero__image"
-          src="./images/desktop/hero/slider-icecream_dt.png"
-          alt="Ice cream"
-        />
+          " media="(min-width: 320px)" />
+        <img class="hero__image" src="./images/desktop/hero/slider-icecream_dt.png" alt="Ice cream" />
       </picture>
+      <div class="ellipse"></div>
       <div class="hero__bioeco-info">
         <picture>
-          <source
-            srcset="
+          <source srcset="
               ./images/desktop/hero/slider-milkjug_dt.png    1x,
               ./images/desktop/hero/slider-milkjug_dt@2x.png 2x
-            "
-            media="(min-width: 1280px)"
-          />
-          <source
-            srcset="
+            " media="(min-width: 1280px)" />
+          <source srcset="
               ./images/tablet/hero/slider-milkjug_tb.png    1x,
               ./images/tablet/hero/slider-milkjug_tb@2x.png 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <img
-            class="hero__bioeco-info-image"
-            src="./images/desktop/hero/slider-milkjug_dt.png"
-            alt="milk jug"
-          />
+            " media="(min-width: 768px)" />
+          <img class="hero__bioeco-info-image" src="./images/desktop/hero/slider-milkjug_dt.png" alt="milk jug" />
         </picture>
         <p class="hero__bioeco-info-text">
+          <a href="#">
+            <button class="round-button" type="button">
+              <svg class="round-button__arrow">
+                <use href="./images/icons.svg#arrow_right_long"></use>
+              </svg>
+            </button>
+          </a>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
           ut labore et
         </p>
-        <button class="round-button" type="button"></button>
+
       </div>
       <div>
         <picture>
-          <source
-            srcset="
+          <source srcset="
               ./images/desktop/hero/slider-woman_dt.png    1x,
               ./images/desktop/hero/slider-woman_dt@2x.png 2x
-            "
-            media="(min-width: 1280px)"
-          />
-          <source
-            srcset="
+            " media="(min-width: 1280px)" />
+          <source srcset="
               ./images/tablet/hero/slider-woman_tb.png    1x,
               ./images/tablet/hero/slider-woman_tb@2x.png 2x
-            "
-            media="(min-width: 768px)"
-          />
-          <img
-            class="hero__image-woman"
-            src="./images/desktop/hero/slider-woman_dt.png"
-            alt="woman enjoying her icecream"
-          />
+            " media="(min-width: 768px)" />
+          <img class="hero__image-woman" src="./images/desktop/hero/slider-woman_dt.png"
+            alt="woman enjoying her icecream" />
         </picture>
       </div>
     </div>
